pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprOrConds/policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (*) dst: (tag = Slytherin) conn: All Connections'
        nsx-id: "9198"
    creationTimestamp: null
    name: policy-0
    namespace: default
spec:
    ingress:
        - from:
            - podSelector: {}
    podSelector:
        matchExpressions:
            - key: tag__Slytherin
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (*) dst: (tag != DB) conn: All Connections'
        nsx-id: "9198"
    creationTimestamp: null
    name: policy-1
    namespace: default
spec:
    ingress:
        - from:
            - podSelector: {}
    podSelector:
        matchExpressions:
            - key: tag__DB
              operator: DoesNotExist
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (tag = Gryffindor) dst: (tag = Slytherin) conn: All Connections'
        nsx-id: "9199"
    creationTimestamp: null
    name: policy-2
    namespace: default
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: tag__Slytherin
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: tag__Gryffindor
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (*) dst: (tag = Gryffindor) conn: All Connections'
        nsx-id: "9200"
    creationTimestamp: null
    name: policy-3
    namespace: default
spec:
    ingress:
        - from:
            - podSelector: {}
    podSelector:
        matchExpressions:
            - key: tag__Gryffindor
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (*) dst: (tag = Hufflepuff) conn: All Connections'
        nsx-id: "9201"
    creationTimestamp: null
    name: policy-4
    namespace: default
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: tag__Hufflepuff
                      operator: Exists
    podSelector: {}
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (*) dst: (tag != DB) conn: All Connections'
        nsx-id: "9201"
    creationTimestamp: null
    name: policy-5
    namespace: default
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: tag__DB
                      operator: DoesNotExist
    podSelector: {}
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: Default Deny Network Policy
        nsx-id: none
    creationTimestamp: null
    name: default-deny
    namespace: default
spec:
    podSelector: {}
    policyTypes:
        - Ingress
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: Network Policy To Allow Access To DNS Server
        nsx-id: none
    creationTimestamp: null
    name: dns-policy
    namespace: default
spec:
    egress:
        - ports:
            - port: 53
              protocol: UDP
          to:
            - namespaceSelector: {}
              podSelector:
                matchLabels:
                    k8s-app: kube-dns
    podSelector: {}
    policyTypes:
        - Egress
